--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   authorize:
     name: Authorize
-    runs-on: macos-10.15
+    runs-on: macos-12
     steps:
       - name: ${{ github.actor }} permission check to do a release
         uses: "lannonbr/repo-permission-check-action@2.0.2"
@@ -22,7 +22,7 @@ jobs:
 
   release:
     name: Release
-    runs-on: macos-10.15
+    runs-on: macos-12
     needs: [authorize]
     strategy:
       matrix:
@@ -35,10 +35,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: node_modules cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
@@ -61,7 +61,7 @@ jobs:
 
       - name: Cache Bundle Gems and Cocoapods
         id: cache-gems-pods
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             Pods
@@ -90,12 +90,12 @@ jobs:
 
   gh-pages:
     name: Publish to GitHub Pages
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: [authorize]
     steps:
       #This step checks out a copy of your repository. Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
       - name: Setup Node.js environment
