--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
     needs: [authorize]
     strategy:
       matrix:
-        ruby-version: ["2.7.x"]
+        ruby-version: ["2.7"]
     env:
       GIT_AUTHOR_NAME: amplitude-sdk-bot
       GIT_AUTHOR_EMAIL: amplitude-sdk-bot@users.noreply.github.com
@@ -55,7 +55,7 @@ jobs:
         run: yarn prepare
 
       - name: Setup Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby-version }}
 
@@ -71,7 +71,7 @@ jobs:
       - name: Install Cocoapods
         if: steps.cache-gems-pods.outputs.cache-hit != 'true'
         run: |
-          gem install bundler
+          gem install bundler -v 2.4.22
           bundle config path vendor/bundle
 
       - name: Release --dry-run  # Uses release.config.js
